--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other styles files */
 
-//@use 'ngx-collapse-animated';
+@use 'ngx-collapse-animated';
